finalize admin product shell and storefront fixes